# lab08_trimeshes_template

./: CMakeLists.txt  README.md  Settings.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.h  Sphere.cpp  Sphere.h  Triangle.h
src/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  settings.h
src/shapes/: Cone.cpp  Cube.cpp  Cube.h  Cylinder.cpp  Sphere.cpp  Sphere.h  Tet.cpp  Triangle.cpp
